--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## 1.3.3-plus-non-free (2022-03-09)
+
+* more compact category tags
+
 ## 1.3.1-plus-non-free (2022-03-05)
 
 ### typography
