--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## 1.3.4-plus-non-free (2022-05-05)
+
+* replace American with British flag in language selector
+
 ## 1.3.3-plus-non-free (2022-03-09)
 
 * more compact category tags
