--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,9 @@
 # Changelog
 
+## 1.5.1-plus-non-free: update screenshot (2023-05-02)
+
+* update screenshot
+
 ## 1.5.0-plus-non-free: utility classes (2023-04-28)
 
 * utility classes to control responsive image layout
