--- a/CHANGELOG
+++ b/CHANGELOG
@@ -4,11 +4,16 @@
 
 * prevent multiple H1 headings
 
+## 1.8.1-plus-non-free: improve performance (2024-09-22)
+
+* prevent float breaking mobile layout (fixed)
+
 ## 1.8.0-plus-non-free: improve performance (2024-09-22)
 
 * hide (zero) comment count
 * disable mobile image float to prevent single-word or single-letter columns
 * set unique Docker container name to prevent name conflicts with similar WordPress projects
+* don't hide author
 
 ## 1.7.0-plus-non-free: improve performance (2024-07-08)
 
