add flex gallery styles

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,5 +1,10 @@
 # Changelog
 
+## 2.2.0-plus-non-free: flex gallery layout (2025-10-27)
+
+* add custom flex gallery styles
+
+
 ## 2.1.0-plus-non-free: improve appearance (2025-04-20)
 
 * add year to post teaser date
