SEO: hide breadcrumb navigation on archive pages

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -2,10 +2,8 @@
 
 ## 2.2.4-plus-non-free: display fixes, SEO improvements (2025-11-12)
 
-* SEO: show category description on category archives first page
-* SEO: hide breadcrumb navigation on category archive page
-* SEO: remove the word Archive from category archive page title
-* fix markup errors in single page breadcrumb navigation
+* SEO: show category description on category archives first pages
+* SEO: hide breadcrumb navigation on archive pages
 
 ## 2.2.2-plus-non-free: search engine optimization (2025-10-30)
 
