--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,10 +1,12 @@
 # Changelog
 
-## 2.3.2-plus-non-free: improve visual readability and accessibility (2026-xx-yy)
+## 2.3.2-plus-non-free: improve visual readability and accessibility (2026-01-06)
 
-* native reader mode with less freaky headline font (TODO)
-* verify (and improve) print styles (TODO)
+* native reader mode with less freaky headline font
+* verify and improve print styles
 * prevent category capitalization of conjunctions
+* fix related posts fallback logic
+* clean up markup
 
 ## 2.3.1-plus-non-free: improve content discovery (2026-01-05)
 
